# anglo-saxon-dictionary

./: Cargo.toml  README.md  flake.nix
app/: Cargo.toml
app/src/: app.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
