[package]
name = "anglo-saxon-dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_derive = "4.4.7"
anglo-saxon-dict-parser = { path = "../parser" }
colored = "2.1.0"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
url = "2.5.0"
